--- a/style.css
+++ b/style.css
@@ -1,94 +1,151 @@
 html {
-    background-color: black;
-    color: green;
-  } 
-  
-  /* Flex Container Setup */
+  background-color: white;
+  color: green;
+} 
+    
+/* Flex Container Setup */
+    
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+    
+/* Header */
+    
+.header {
+  height: 50vh;
+  width: 60vw;
+  border: dashed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+    
+#container-main {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #502E84;
+}
+    
+/* Main */
+    
+.main {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  position: relative;
+  margin: ;
+}
+    
+/* Containers-odd */
+    
+#container-odd {
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+}
+    
+.left-container-odd {
+  float: left;
+  background-color: ;
+}
 
-  .flex-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  /* Header */
-  
-  .header {
-    height: 100vh;
-    width: 100vw;
-    background-color: blue;
-  }
-  
-  #container-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 10px 10px 10px;
-    background-color: blue;
-  }
-  
-  /* Main */
-  
-  .main {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    position: relative;
-    margin: 10px 10px 10px 10px;
-  }
-  
-  /* Containers-odd */
-  
-  #container-odd {
-    background-color: yellow;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .left-container-odd {
-    float: left;
-  }
-  .right-container-odd {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 20vw;
-    background: blue;
-    width: 50%;
-    float: right;
-    margin-left: 75px
-  }
-  
-  /* Containers-even */
-  
-  #container-even {
-    background-color: blue;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .right-container-even {
-    text-align: right;
-  }
-  
-  .left-container-even {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 20vw;
-    background: yellow;
-    width: 50%;
-    float: left;
-    margin-right: 75px
-  }
-  
-  img {
-    border-radius: 50%;
-    width: 80%;
-  /*   position: absolute;
-    top:0;
-    right: 0; */
-  }
-  
-  
-  
-  
+.right-container-odd {
+  display: flex;
+  align-items: center ;
+  justify-content: space-around;
+  height: 20vw;
+  background: ;
+  width: 50%;
+  float: right;
+  margin-left: 75px;
+  color: #502E84;
+}
+    
+/* Containers-even */
+    
+#container-even {
+  background-color: #502E84;
+  align-items: center;
+  justify-content: center;
+}
+    
+.right-container-even {
+  display: flex;
+  float: right;
+  background-color: ;
+}
+    
+.left-container-even {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 20vw;
+  background: #502E84;
+  width: 50%;
+  float: left;
+  margin-right: 75px;
+  color: white;
+}
+    
+img {
+  border-radius: 50%;
+  height: 512px;
+  width: 512px;
+  top: 0;
+}
+
+#contact:hover{
+  opacity: 0.5;
+}
+    
+#contact {
+  border-radius: 0;
+  height: 80px;
+  width: 80px;
+  transition: 0.5s;
+}
+
+#team_contact:hover {
+   opacity: 0.5;
+   cursor: pointer;
+}
+
+#team_contact {
+  margin-top: 0px;
+  background-color: #2196F3;
+  color: white;
+  width: 400px;
+  border-radius: 50px;
+  text-align: center;
+  transition: 0.5s;
+}
+    
+h1 {
+  font-size: 13rem;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 20px;
+  margin-bottom: 0px;
+}
+
+h2 {
+  font-size: 5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  letter-spacing: 10px;
+}
+
+h3 {
+  font-size: 2rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+p {
+  font-size: 3rem;
+  font-family: 'Montserrat', sans-serif;
+}
