Updated header and added nav bar. media queries added for responsiveness

--- a/style.css
+++ b/style.css
@@ -1,15 +1,57 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html {
-  background-color: white;
   color: green;
 } 
-    
+
 /* Flex Container Setup */
     
 .flex-container {
   display: flex;
   flex-direction: column;
 }
-    
+/* Navigation */
+
+nav {
+  position: relative;
+  text-align: right;
+  background: black;
+  padding-top: 27px;
+  height: 70px;
+}   
+
+nav a {
+  font-size: 1rem;
+  padding: 0px 50px 0px 100px;
+  color: white;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1px;
+}
+
+#nav-content {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  margin: 15px 0px 0px 50px;
+}
+#nav-content img {
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+}
+#nav-text p {
+  font-size: 1rem;
+  padding: 3.45px 0px 0px 10px;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  letter-spacing: 1.5px;
+}
+
 /* Header */
     
 .header {
@@ -28,6 +70,7 @@ html {
   justify-content: center;
   background-color: #000000;
 }
+
     
 /* Main */
     
@@ -48,7 +91,6 @@ html {
     
 .left-container-odd {
   float: left;
-  background-color: ;
 }
 
 .right-container-odd {
@@ -56,7 +98,6 @@ html {
   align-items: center ;
   justify-content: space-around;
   height: 20vw;
-  background: ;
   width: 50%;
   float: right;
   margin-left: 75px;
@@ -74,7 +115,6 @@ html {
 .right-container-even {
   display: flex;
   float: right;
-  background-color: ;
 }
     
 .left-container-even {
@@ -82,8 +122,8 @@ html {
   align-items: center;
   justify-content: space-around;
   height: 20vw;
-  background: #502E84;
   width: 50%;
+  background: #502E84;
   float: left;
   margin-right: 75px;
   color: white;
@@ -151,4 +191,24 @@ p {
   font-size: 3rem;
   font-family: 'Montserrat', sans-serif;
   margin-top: 10px;
+}
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+
+    h1 {
+      font-size: 10rem;
+    }
+    /* h2 {
+      font-size: ;
+    } */
+    p {
+    font-size: 1.7rem;
+    }
+    img {
+      height: 600px;
+      width: 600px;
+    }
 }
